--- a/site/cardType01.html
+++ b/site/cardType01.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-    <section id="cardType" class="cardType01">
+    <section class= "cardType cardType01">
         <div class="container">
             <h2>고양이랑 놀자</h2>
             <p>HARSTORY에 어서오세요 고양이들의 평온한 일상을 담은 공간입니다.</p>
@@ -28,7 +28,7 @@
                     <a href="#">
                         <img src="img/card01.jpg" alt="우리 고양이 관련 이미지입니다." class="card-img">
                     <strong class="card-title">우리 고양이의 건강</strong>
-                    <span class="card-desc">고양이들 몸에도 좋은 것과 나쁜 것이 있습니다. 반려묘를 키운다면 집에 있는 식물, 음식 신경...</span>
+                    <span class="card-desc">고양이들 몸에도 좋은 것과 나쁜 것이 있습니다. 반려묘를 키운다면 집에 있는 식물, 음식 등을 신경써야하는데요</span>
                     <span class="card-keyword">
                         <span>#고양이</span>
                         <span>#건강</span>
@@ -39,7 +39,7 @@
                     <a href="#">
                         <img src="img/card02.jpg" alt="고양이 언어 관련 이미지입니다." class="card-img">
                     <strong class="card-title">고양이의 언어</strong>
-                    <span class="card-desc">동물들 끼리는 보통 소리로 소통하는 경우가 많지만 인간에게는 행동으로 보여줄때가 많습니다...</span>
+                    <span class="card-desc">동물들 끼리는 보통 소리로 소통하는 경우가 많지만 인간에게는 행동으로 보여줄때가 많습니다</span>
                     <span class="card-keyword">
                         <span>#고양이</span>
                         <span>#반려묘</span>
@@ -50,7 +50,7 @@
                     <a href="#">
                         <img src="img/card03.jpg" alt="고양이 앨범 관련 이미지입니다." class="card-img">
                     <strong class="card-title">고양이 앨범</strong>
-                    <span class="card-desc">내가 사랑하는 반려묘의 사진을 공유하고 자랑하며 서로의 생각을 공유해 봅시다.</span>
+                    <span class="card-desc">내가 사랑하는 반려묘의 사진을 기록하고 자랑하며 서로의 생각을 공유해 봅시다.</span>
                     <span class="card-keyword">
                         <span>#고양이</span>
                         <span>#앨범</span>
@@ -60,6 +60,58 @@
             </div>
         </div>
     </section>
-    <!-- //card type-->
+    <!-- //card type1-->
+
+    <section class="cardType cardType02">
+        <div class="container">
+            <h2>고양이랑 놀자</h2>
+            <p>HARSTORY에 어서오세요 고양이들의 평온한 일상을 담은 공간입니다.</p>
+            <div class="card-wrap2">
+                <div class="card2">
+                    <a href="#">
+                        <img src="img/card04.jpg" alt="우리 고양이 관련 이미지입니다." class="card-img">
+                    <strong class="card-title">우리 고양이의 건강</strong>
+                    <span class="card-desc">고양이들 몸에도 좋은 것과 나쁜 것이 있습니다. 반려묘를 키운다면 집에 있는 식물, 음식 등을 신경써야하는데요</span>
+                    <span class="card-keyword">
+                        <span>SITE</span>
+                    </span>
+                    </a>
+                </div>
+                <div class="card2">
+                    <a href="#">
+                        <img src="img/card05.jpg" alt="고양이 언어 관련 이미지입니다." class="card-img">
+                    <strong class="card-title">고양이의 언어</strong>
+                    <span class="card-desc">동물들 끼리는 보통 소리로 소통하는 경우가 많지만 인간에게는 행동으로 보여줄때가 많습니다</span>
+                    <span class="card-keyword">
+                        <span>SITE</span>
+                    </span>
+                    <span class="card-keyword2">
+                        <span>CODING</span>
+                    </span>
+                    </a>
+                </div>
+                <div class="card2">
+                    <a href="#">
+                        <img src="img/card06.jpg" alt="고양이 놀이 관련 이미지입니다." class="card-img">
+                    <strong class="card-title">고양이의 놀이</strong>
+                    <span class="card-desc">고양이도 자신들만의 놀이터가 있다면 무엇을 하며 놀까요? 즐기는 놀이는...</span>
+                    <span class="card-keyword">
+                        <span>SITE</span>
+                    </span>
+                    </a>
+                </div>
+                <div class="card2">
+                    <a href="#">
+                        <img src="img/card07.jpg" alt="고양이 앨범 관련 이미지입니다." class="card-img">
+                    <strong class="card-title">고양이 앨범</strong>
+                    <span class="card-desc">내가 사랑하는 반려묘의 사진을 기록하고 자랑하며 서로의 생각을 공유해 봅시다.</span>
+                    <span class="card-keyword">
+                        <span>SITE</span>
+                    </span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
