--- a/site/imgType.html
+++ b/site/imgType.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/fonts.css">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/common.css">
-    <link rel="stylesheet" href="css/imgtype.css">
+    <link rel="stylesheet" href="CSS/imgtype.css">
     <title>이미지 카드타입</title>
 </head>
 <body>
