--- a/site/imgType.html
+++ b/site/imgType.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/fonts.css">
-    <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/common.css">
-    <link rel="stylesheet" href="CSS/imgtype.css">
+    <link rel="stylesheet" href="site/CSS/fonts.css">
+    <link rel="stylesheet" href="site/CSS/reset.css">
+    <link rel="stylesheet" href="site/CSS/common.css">
+    <link rel="stylesheet" href="site/CSS/imgtype.css">
     <title>이미지 카드타입</title>
 </head>
 <body>
