--- a/refer-javascript/javascriptRefer05.html
+++ b/refer-javascript/javascriptRefer05.html
@@ -134,7 +134,7 @@
     const tem2 = " 자바스크립트";
     const tem3 = " 핵심";
 
-    document.querySelector(".sample01_R4").innerHTML = `나는 ${txt1}(modern) ${txt2}(javascrpt) ${txt3}을 갖고싶다`;
+    document.querySelector(".sample01_R4").innerHTML = `나는 ${tem1}(modern) ${tem2}(javascrpt) ${tem3}을 갖고싶다`;
 }
 </code></pre>
         </div>
@@ -952,8 +952,8 @@
             document.querySelector(".sample01_N4").innerHTML = "4";
             document.querySelector(".sample01_Q4").innerHTML = "모던, 자바스크립트, 핵심";
             document.querySelector(".sample01_M4").innerHTML = "템플릿 문자열";
-            document.querySelector(".sample01_R4").innerHTML = "나는" + txt1 + "(modern)" + txt2 + "(javascrpt)" + txt3 + "을 갖고싶다";
-            document.querySelector(".sample01_R4").innerHTML = `나는 ${txt1}(modern) ${txt2}(javascrpt) ${txt3}을 갖고싶다`;
+            document.querySelector(".sample01_R4").innerHTML = "나는" + tem1 + "(modern)" + tem2 + "(javascrpt)" + tem3 + "을 갖고싶다";
+            document.querySelector(".sample01_R4").innerHTML = `나는 ${tem1}(modern) ${tem2}(javascrpt) ${tem3}을 갖고싶다`;
         }
 
 
