--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -216,6 +216,7 @@
         <section class="refer">
             <h3 class="active"><a href="index.html">Alphabet</a></h3>
             <h3><a href="index2.html">Topics</a></h3>
+            <h3><a href="transform.html">Transform</a></h3>
             <ul class="page">
                 <li><a href="../refer-html/index.html">HTML</a></li>
                 <li><a href="../refer-css/index.html">CSS</a></li>
@@ -955,19 +956,19 @@
                     </tr>
                     <tr>
                         <td>top</td>
-                        <td>top 위치 요소의 위쪽 속성을 설정합니다.</td>
+                        <td>위치 요소의 위쪽 속성을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>transform</td>
-                        <td></td>
+                        <td>요소의 움직임을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>transform-origin</td>
-                        <td></td>
+                        <td>요소의 움직임 방향을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>transform-style</td>
-                        <td></td>
+                        <td>요소의 움직임 스타일을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>transition</td>
@@ -975,19 +976,19 @@
                     </tr>
                     <tr>
                         <td>transition-delay</td>
-                        <td></td>
+                        <td>요소의 움직임 지속 시간을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>transition-duration</td>
-                        <td></td>
+                        <td>요소의 움직임 지연 시간을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>transition-property</td>
-                        <td></td>
+                        <td>요소의 움직임 속성을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>transition-timing-function</td>
-                        <td></td>
+                        <td>요소의 움직임 시간 길이를 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>unicode-bidi</td>
