--- a/refer-javascript/javascriptRefer10.html
+++ b/refer-javascript/javascriptRefer10.html
@@ -13,6 +13,76 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+     .ex1 {
+        display: flex;
+        justify-content: space-between;
+    }
+    .ex1 > div {
+        border: 4px dashed transparent;
+        width: 18%;
+    }
+    .ex1 > div.active {
+        border: 4px dashed #a51a3d;
+        background-color: #a51a3d;
+        border-radius: 5px;
+    }
+    .ex1 > div.active img {
+        opacity: 0.4;
+    }
+    .ex1 > div img {
+        width: 100%;
+        border-radius: 5px;
+        vertical-align: top;
+    }
+
+    
+    .ex2 {
+        display: flex;
+        justify-content: space-between;
+    }
+    .ex2 > div {
+        border: 4px dashed transparent;
+        width: 18%;
+    }
+    .ex2 > div.active {
+        border: 4px dashed #a51a3d;
+        background-color: #a51a3d;
+        border-radius: 5px;
+    }
+    .ex2 > div.active img {
+        opacity: 0.4;
+    }
+    .ex2 > div img {
+        width: 100%;
+        border-radius: 5px;
+        vertical-align: top;
+    }
+
+
+    .ex3 {
+        display: flex;
+        justify-content: space-between;
+    }
+    .ex3 > div {
+        border: 4px dashed transparent;
+        width: 18%;
+    }
+    .ex3 > div.active {
+        border: 4px dashed #a51a3d;
+        background-color: #a51a3d;
+        border-radius: 5px;
+    }
+    .ex3 > div.active img {
+        opacity: 0.4;
+    }
+    .ex3 > div img {
+        width: 100%;
+        border-radius: 5px;
+        vertical-align: top;
+    }
+
+</style>
 
 <body>
     <h1>Javascript 레퍼런스</h1>
@@ -42,14 +112,177 @@
 
     <div class="list">
         <ol>
-        <li><a href="#sample1">요소 객체 : 선택자 : querySelector()</a></li>
-        <li><a href="#sample2">요소 객체 : 선택자 : querySelectorALL()</a></li>
-        <li><a href="#sample3">요소 객체 : 선택자 : getElementById() : 아이디 선택자</a></li>
+        <li><a href="#sample1">요소 객체 : 클래스 메서드 : .classList.add()</a></li>
+        <li><a href="#sample2">요소 객체 : 클래스 메서드 : .classList.remove()</a></li>
+        <li><a href="#sample3">요소 객체 : 클래스 메서드 : .classList.toggle() : 아이디 선택자</a></li>
+        <li><a href="#sample3">요소 객체 : 클래스 메서드 : .classList.contains() : 아이디 선택자</a></li>
         </ol>
     </div>
 
     <hr>
 
+    <div id="sample01" class="sample">
+        <h2>01. 클래스 메서드 : .classList.add() / .classList.remove()</h2>
+        <div class="view view1">
+            <div class="view ex1">
+                <div><img src="img/img01.jpg" alt="이미지1"></div>
+                <div><img src="img/img02.jpg" alt="이미지2"></div>
+                <div><img src="img/img03.jpg" alt="이미지3"></div>
+                <div><img src="img/img04.jpg" alt="이미지4"></div>
+                <div><img src="img/img05.jpg" alt="이미지5"></div>
+            </div>
+        </div>
+        <div class="btn">
+            <a href="#c" class="btn1-1">클릭하면 모든 이미지에 클래스(active)를 추가합니다.</a>
+            <a href="#c" class="btn1-2">클릭하면 모든 이미지에 클래스(active)를 삭제합니다.</a>
+        </div>
+        <div class="code">
+            <pre class="line-numbers"><code class="language-js">{
+    document.querySelector(".btn1-1").addEventListener("click", function(){
+        document.querySelectorAll(".ex1 div").forEach((el) => {
+            el.classList.add("active");
+        })
+    })
+
+    document.querySelector(".btn1-2").addEventListener("click", function(){
+        document.querySelectorAll(".ex1 div").forEach((el) => {
+            el.classList.remove("active");
+        })
+    })
+</code></pre>
+        </div>
+    </div>
+
+    <script>
+        document.querySelector(".btn1-1").addEventListener("click", function(){
+            document.querySelectorAll(".ex1 div").forEach((el) => {
+                el.classList.add("active");
+            })
+        })
+
+        document.querySelector(".btn1-2").addEventListener("click", function(){
+            document.querySelectorAll(".ex1 div").forEach((el) => {
+                el.classList.remove("active");
+            })
+        })
     </script>
+<!-- //sample01-->
+
+<hr>
+
+<div id="sample02" class="sample">
+    <h2>02. 클래스 메서드 : .classList.toggle() : 아이디 선택자</h2>
+    <div class="view view1">
+        <div class="view ex2">
+            <div><img src="img/img06.jpg" alt="이미지6"></div>
+            <div><img src="img/img07.jpg" alt="이미지7"></div>
+            <div><img src="img/img08.jpg" alt="이미지8"></div>
+            <div><img src="img/img09.jpg" alt="이미지9"></div>
+            <div><img src="img/img10.jpg" alt="이미지10"></div>
+        </div>
+    </div>
+    <div class="btn">
+        <a href="#c" class="btn2-1">이미지를 클릭하면 모든 이미지에 클래스(active)를 추가/삭제합니다.</a>
+    </div>
+    <div class="code">
+        <pre class="line-numbers"><code class="language-js">{
+    //모든 이미지
+    document.querySelectorAll(".ex2 div").forEach((el) => {
+        el.addEventListener("click",function(){
+            document.querySelectorAll(".ex2 div").forEach((el) => {
+                el.classList.toggle("active");
+            })
+        });
+    })
+
+    //클릭한 이미지만
+    document.querySelectorAll(".ex2 div").forEach((el) => {
+        el.addEventListener("click", function(){
+            this.classList.toggle("active");
+        });
+    });
+}
+</code></pre>
+    </div>
+</div>
+
+<script>
+    //모든 이미지
+    //  document.querySelectorAll(".ex2 div").forEach((el) => {
+    //      el.addEventListener("click",function(){
+    //         document.querySelectorAll(".ex2 div").forEach((el) => {
+    //             el.classList.toggle("active");
+    //         })
+    //      });
+    //  })
+
+     //클릭한 이미지만
+     document.querySelectorAll(".ex2 div").forEach((el) => {
+         el.addEventListener("click", function(){
+             this.classList.toggle("active");
+         });
+     });
+</script>
+<!-- //sample02-->
+
+<hr>
+
+<div id="sample01" class="sample">
+    <h2>03. 클래스 메서드 : .classList.contains() : 아이디 선택자</h2>
+    <div class="view view1">
+        <div class="view ex3">
+            <div><img src="img/img11.jpg" alt="이미지11"></div>
+            <div><img src="img/img12.jpg" alt="이미지12"></div>
+            <div class="active"><img src="img/img13.jpg" alt="이미지13"></div>
+            <div class="active"><img src="img/img14.jpg" alt="이미지14"></div>
+            <div><img src="img/img15.jpg" alt="이미지15"></div>
+        </div>
+    </div>
+    <div class="btn">
+        <a href="#c" class="btn3-0">리셋</a>
+        <a href="#c" class="btn3-1">클릭하면 클래스(active)를 찾은 후 제거합니다.</a>
+    </div>
+    <div class="code">
+        <pre class="line-numbers"><code class="language-js">{
+    document.querySelector(".btn3-0").addEventListener("click", function(){
+        document.querySelector(".ex3 > div:nth-child(3)").classList.add("active")
+        document.querySelector(".ex3 > div:nth-child(4)").classList.add("active")
+    })
+
+
+    document.querySelector(".btn3-1").addEventListener("click", () => {
+        document.querySelectorAll(".ex3 > div").forEach(el => {
+            if(el.classList.contains("active")){
+                    el.classList.remove("active");
+            }
+        })
+    });
+}
+</code></pre>
+    </div>
+</div>
+
+<script>
+    document.querySelector(".btn3-0").addEventListener("click", function(){
+        document.querySelector(".ex3 > div:nth-child(3)").classList.add("active")
+        document.querySelector(".ex3 > div:nth-child(4)").classList.add("active")
+    })
+
+
+    document.querySelector(".btn3-1").addEventListener("click", () => {
+        document.querySelectorAll(".ex3 > div").forEach(el => {
+            if(el.classList.contains("active")){
+                    el.classList.remove("active");
+            }
+        })
+    });
+</script>
+
+<hr>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.0/prism.min.js"></script>
+
 </body>
 </html>
