--- a/site/imgType.html
+++ b/site/imgType.html
@@ -27,14 +27,14 @@
                             <span class="card-p">내 식물에게 딱 맞는<br>화분 고르기와 분갈이</span>
                             <span class="card-bt">자세히 보기</span>
                         </div>
-                        <div class="card">
-                            <a href="#"></a>
-                            <img src="img/imgtype02.jpg" alt="이미지02" class="img02">
-                            <div class="txt-box02">
-                                <div class="tlite">식물 관리하기</div>
-                                <span class="card-p">식물에게 중요한 물주기와<br>햇빛, 잎과 뿌리 관리하는 법</span>
-                                <span class="card-bt">자세히 보기</span>
-                            </div>
+                    <div class="card">
+                        <a href="#"></a>
+                        <img src="img/imgtype02.jpg" alt="이미지02" class="img02">
+                        <div class="txt-box02">
+                            <div class="tlite">식물 관리하기</div>
+                            <span class="card-p">식물에게 중요한 물주기와<br>햇빛, 잎과 뿌리 관리하는 법</span>
+                            <span class="card-bt">자세히 보기</span>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -69,6 +69,43 @@
                             <div class="tlite">악세사리</div>
                         </div>
                 </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="imgtype">
+        <div class="container">
+            <div class="imgtype03">
+                <h2>고래상어 생태 일지</h2>
+                <div class="card-wrap">
+                    <div class="card">
+                        <a href="#"></a>
+                        <img src="img/imgtype06.jpg" alt="이미지06" class="img01">
+                            <div class="tlite01">우주를 닮은 너</div>
+                            <div class="card-p">어류 중 가장 큰 물고기로 상어류와 달리 입이 주둥이 끝부분에 있습니다.<br>온대, 열대, 아열대 해역의 연근해에 서식하며 21~25˚C의 수온 범위를 회유합니다.</div>
+                            <span class="card-bt">자세히 보기</span>
+                        </div>
+                    <div class="card">
+                        <a href="#"></a>
+                        <img src="img/imgtype07.jpg" alt="이미지07" class="img02">
+                            <div class="tlite02">수족관의 고래상어</div>
+                    </div>
+                    <div class="card">
+                        <a href="#"></a>
+                        <img src="img/imgtype08.jpg" alt="이미지08" class="img03">
+                            <div class="tlite03">멸종위기 고래상어</div>
+                    </div>
+                    <div class="card">
+                        <a href="#"></a>
+                        <img src="img/imgtype09.jpg" alt="이미지09" class="img04">
+                            <div class="tlite04">고래상어 먹이</div>
+                    </div>
+                    <div class="card">
+                        <a href="#"></a>
+                        <img src="img/imgtype10.jpg" alt="이미지10" class="img04">
+                            <div class="tlite05">고래상어 서식지</div>
+                    </div>
                 </div>
             </div>
         </div>
