--- a/refer-javascript/index.html
+++ b/refer-javascript/index.html
@@ -512,8 +512,8 @@
             </div>
             <h1>Javascript</h1>
             <p>
-                <a href="dothome21/refer-javascript/index.html">자바스크립트 레퍼런스 북</a>
-                <a href="dothome21/refer-jquery/index.html">제이쿼리 레퍼런스 북</a>
+                <a href="index.html">자바스크립트 레퍼런스 북</a>
+                <a href="refer-jquery/index.html">제이쿼리 레퍼런스 북</a>
             </p>
             <nav class="menu">
                 <ul>
