--- a/site/cardType.html
+++ b/site/cardType.html
@@ -175,11 +175,48 @@
             </div>
         </div>
     </section>
+    
+    <!-- card type4 -->
+    <section>
+        <div id="testType">
+            <div class="container">
+                <div class="testType01">
+                    <h2>클로바노트에서 <br>음성 기록을 정리하는 팁</h2>
+                    <div class="testwrap">
+                        <div class="test">
+                            <img class="t-img" src="img/cover_img01.png" alt="녹음 찾기">
+                            <div class="txt-box">
+                              <div class="txt">녹음 찾기</div>
+                              <div class="tite">메모, 북마크 구간을<br>검색해서 쉽게 찾아 들어요</div>
+                            </div>
+                          </div>
+  
+                        <div class="test">
+                          <img class="t-img" src="img/cover_img02.png" alt="수정하기">
+                          <div class="txt-box">
+                              <div class="txt">수정하기</div>
+                              <div class="tite">변환된 음성 기록과<br>메모를 수정할 수 있어요</div>
+                          </div>
+                      </div>
+  
+                      <div class="test">
+                          <img class="t-img" src="img/cover_img03.png" alt="다운로드">
+                          <div class="txt-box">
+                              <div class="txt">다운로드</div>
+                              <div class="tite">녹음 파일과 음성 기록,<br>메모를 다운로드할 수 있어요</div>
+                          </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
 
-     <!-- card type4 -->
+
+     <!-- card type5 -->
      <section id="cardType">
         <div class="container">
-            <div class="cardType04">
+            <div class="cardType05">
                <h2>AI Dvices</h2>
                <p>AI 기술이 집약된 제품으로 편리한 일상을 만나보세요.</p>
             <div class="card-wrap">
