--- a/refer-effect/sliderEffect/index.html
+++ b/refer-effect/sliderEffect/index.html
@@ -21,6 +21,11 @@
     <nav>
         <ul id="nav">
             <li><a href="../index.html">MAIN</a></li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
         </ul>
     </nav>
 
